# aegis-broker

./: .env  .env.local  .env.prod  .gitignore  AGENTS.md  AegisBroker_Config_Management_Spec.md  AegisBroker_Double_Entry_Ledger_Accounting_Spec.md  AegisBroker_Financial_Control_Reconciliation_Spec.md  AegisBroker_Financial_Control_Reconciliation_Spec_v1_1.md  AegisBroker_PostgreSQL_Schema_Migration_Spec.md  AegisBroker_PostgreSQL_Schema_Migration_Spec_v1_1.md  AegisBroker_Rust_API_Contract_Spec.md  AegisBroker_Rust_API_Contract_Spec_v1_1.md  AegisBroker_ZEABUR_Deployment_Repo_Blueprintr.md  Core_Event_Audit_Architecture_Spec_WorkItem_List_AegisBroker.md  Core_Event_Audit_Architecture_Spec_WorkItem_List_AegisBroker_v1_1.md  README.md
Backup_Specs/: AegisBroker_Financial_Control_Reconciliation_Spec.md  AegisBroker_PostgreSQL_Schema_Migration_Spec.md  AegisBroker_Rust_API_Contract_Spec.md  AegisBroker_ZEABUR_Deployment_Repo_Blueprint.md  Core_Event_Audit_Architecture_Spec_WorkItem_List_AegisBroker.md
Docs/00_總覽/: README_商品交易文件系統.docx
Docs/99_共用主檔與制度文件/: 共用主檔_商品規格.docx  共用制度_狀態流轉規則.docx
Docs/architecture/: Content_Service_Architecture.md
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: config.rs  error.rs  main.rs
docs/architecture/: Development_Plan.md  README.md
docs/design/: Commodity_Market_Ontology_and_Module_Design.md  Content_Service_Architecture.md  Development_Plan.md  README.md  aegis_broker_role_permission_api_db_ledger_mapping.md
frontend-python/: Dockerfile  README.md  index.html  server.py
infra/zeabur/: README.md
storage/: README.md
(+71 files in other folders)
